--- a/index.html
+++ b/index.html
@@ -1,27 +1,16 @@
-<html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<head>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-</head>
-
-<body>
-
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="http://static.gulfnews.com/polopoly_fs/1.2148339!/image/4012070171.gif_gen/derivatives/box_620347/4012070171.gif" alt="The Dubai Frame">
-  <div class="card-body">
-    <h5 class="card-title">The Dubai Frame</h5>
-    <p class="card-text">Dubai Frame is Dubai's latest landmark that overlooks the entire city. The unique architecture of the building allows you to enjoy 360 degrees views of both old and new Dubai.</p>
-    <a href="http://gulfnews.com/guides/going-out/ultimate-guide-to-dubai-frame-1.2148254" class="btn btn-primary">Read: The ultimate guide to Dubai Frame</a>
-    <p class="card-text">Location Zabeel Park Cost Dh50 per Adult, Dh20 per child between 3 to 12 years old, Free for children under three, Entry for the elderly and people of determination and two accompanying persons will also be free of charge Timings Open daily from 10am to 7pm.</p>
-  </div>
-</div>
+    <title>Gulf News 101 things to do in Dubai - Card View</title>
+  </head>
+  <body>
 
 <div class="card" style="width: 18rem;">
   <img class="card-img-top" src="http://static.gulfnews.com/polopoly_fs/1.2148339!/image/4012070171.gif_gen/derivatives/box_620347/4012070171.gif" alt="The Dubai Frame">
@@ -63,8 +52,20 @@
   </div>
 </div>
 
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="http://static.gulfnews.com/polopoly_fs/1.2148339!/image/4012070171.gif_gen/derivatives/box_620347/4012070171.gif" alt="The Dubai Frame">
+  <div class="card-body">
+    <h5 class="card-title">The Dubai Frame</h5>
+    <p class="card-text">Dubai Frame is Dubai's latest landmark that overlooks the entire city. The unique architecture of the building allows you to enjoy 360 degrees views of both old and new Dubai.</p>
+    <a href="http://gulfnews.com/guides/going-out/ultimate-guide-to-dubai-frame-1.2148254" class="btn btn-primary">Read: The ultimate guide to Dubai Frame</a>
+    <p class="card-text">Location Zabeel Park Cost Dh50 per Adult, Dh20 per child between 3 to 12 years old, Free for children under three, Entry for the elderly and people of determination and two accompanying persons will also be free of charge Timings Open daily from 10am to 7pm.</p>
+  </div>
+</div>
 
 
-</body>
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
