--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <body>
 
     <section class="jumbotron text-center">
-        <div class="container">
-          <h1 class="jumbotron-heading">101 things to do in the UAE in 2018 by Gulf News</h1>
+        <div class="container page-header">          
+          <h1 class="display-3">101 things to do in the UAE in 2018 by Gulf News</h1>
           <p class="lead text-muted">Your ultimate tourist checklist of one of the greatest places in the Middle East</p>
           <p>
             <a href="http://gulfnews.com/guides/going-out/101-things-to-do-in-the-uae-in-2018-1.1883716">Original source here</a>
