--- a/index.html
+++ b/index.html
@@ -34,9 +34,14 @@
                 <h5 class="card-title">The Dubai Frame</h5>
                 <p class="card-text">Dubai Frame is Dubai's latest landmark that overlooks the entire city. The unique architecture of the building allows you to enjoy 360 degrees views of both old and new Dubai.</p>
                 <a href="http://gulfnews.com/guides/going-out/ultimate-guide-to-dubai-frame-1.2148254" class="btn btn-primary">Read: The ultimate guide to Dubai Frame</a>
-                <div class="d-flex justify-content-between align-items-center">
-                      <small class="text-muted">Location Zabeel Park Cost Dh50 per Adult, Dh20 per child between 3 to 12 years old, Free for children under three, Entry for the elderly and people of determination and two accompanying persons will also be free of charge Timings Open daily from 10am to 7pm</small>
-                    </div>
+                <dl class="row">
+                  <dt class="col-sm-3">Location</dt>
+                  <dd class="col-sm-9">Zabeel Park</dd>
+                  <dt class="col-sm-3">Cost</dt>
+                  <dd class="col-sm-9">Dh50 per Adult, Dh20 per child between 3 to 12 years old, Free for children under three, Entry for the elderly and people of determination and two accompanying persons will also be free of charge</dd>
+                  <dt class="col-sm-3">Timings</dt>
+                  <dd class="col-sm-9">Open daily from 10am to 7pm</dd>
+                </dl>
               </div>
             </div>
           </div>
