description text update
added margins

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                 <h5 class="card-title">The Dubai Frame</h5>
                 <p class="card-text">Dubai Frame is Dubai's latest landmark that overlooks the entire city. The unique architecture of the building allows you to enjoy 360 degrees views of both old and new Dubai.</p>
                 <a href="http://gulfnews.com/guides/going-out/ultimate-guide-to-dubai-frame-1.2148254" class="btn btn-primary">Read: The ultimate guide to Dubai Frame</a>
-                <small class="text-muted">
+                <small class="text-muted mt-1">
                   <dl class="row">
-                    <dt class="col-sm-4">Location</dt>
-                    <dd class="col-sm-8">Zabeel Park</dd>
-                    <dt class="col-sm-4">Cost</dt>
-                    <dd class="col-sm-8">Dh50 per Adult, Dh20 per child between 3 to 12 years old, Free for children under three, Entry for the elderly and people of determination and two accompanying persons will also be free of charge</dd>
-                    <dt class="col-sm-4">Timings</dt>
-                    <dd class="col-sm-8">Open daily from 10am to 7pm</dd>
+                    <dt class="col-sm-3">Location</dt>
+                    <dd class="col-sm-9">Zabeel Park</dd>
+                    <dt class="col-sm-3">Cost</dt>
+                    <dd class="col-sm-9">Dh50 per Adult, Dh20 per child between 3 to 12 years old, Free for children under three, Entry for the elderly and people of determination and two accompanying persons will also be free of charge</dd>
+                    <dt class="col-sm-3">Timings</dt>
+                    <dd class="col-sm-9">Open daily from 10am to 7pm</dd>
                   </dl>
                 </small>
               </div>
