--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <h5 class="card-title">The Dubai Frame</h5>
                 <p class="card-text">Dubai Frame is Dubai's latest landmark that overlooks the entire city. The unique architecture of the building allows you to enjoy 360 degrees views of both old and new Dubai.</p>
                 <a href="http://gulfnews.com/guides/going-out/ultimate-guide-to-dubai-frame-1.2148254" class="btn btn-primary">Read: The ultimate guide to Dubai Frame</a>
-                <small class="text-muted mt-5">
-                  <dl class="row">
+                <small class="text-muted">
+                  <dl class="row mt-4">
                     <dt class="col-sm-3">Location</dt>
                     <dd class="col-sm-9">Zabeel Park</dd>
                     <dt class="col-sm-3">Cost</dt>
@@ -56,7 +56,7 @@
                 <p class="card-text">Dubai Frame is Dubai's latest landmark that overlooks the entire city. The unique architecture of the building allows you to enjoy 360 degrees views of both old and new Dubai.</p>
                 <a href="http://gulfnews.com/guides/going-out/ultimate-guide-to-dubai-frame-1.2148254" class="btn btn-primary">Read: The ultimate guide to Dubai Frame</a>
                 <div class="d-flex justify-content-between align-items-center">
-                      <small class="text-muted mt-5">Location Zabeel Park Cost Dh50 per Adult, Dh20 per child between 3 to 12 years old, Free for children under three, Entry for the elderly and people of determination and two accompanying persons will also be free of charge Timings Open daily from 10am to 7pm</small>
+                      <small class="text-muted mt-4">Location Zabeel Park Cost Dh50 per Adult, Dh20 per child between 3 to 12 years old, Free for children under three, Entry for the elderly and people of determination and two accompanying persons will also be free of charge Timings Open daily from 10am to 7pm</small>
                     </div>
               </div>
             </div>
