header text styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container page-header">          
           <h1 class="display-3">101 things to do in the UAE in 2018 by Gulf News</h1>
           <p class="lead">Your ultimate tourist checklist of one of the greatest places in the Middle East</p>
-          <p class="lead text-muted">I made this because the original page design (blog flow) was not easy to read. Please be a good lad and visit the original page.</p>
+          <p class="text-muted"><em>I made this because the original page design (blog flow) was not easy to read. Please be a good lad and visit the original page.</em></p>
           <p>
             <a href="http://gulfnews.com/guides/going-out/101-things-to-do-in-the-uae-in-2018-1.1883716">Original source here</a>
           </p>
