instagram media embed test
Biryani at Pak Liyari

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     
           <div class="col-md-4">    
             <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="https://www.instagram.com/p/BFte4KxyK8i/" alt="Biryani at Pak Liyari">
+              <img class="card-img-top" src="https://instagram.com/p/BFte4KxyK8i/media/" alt="Biryani at Pak Liyari">
               <div class="card-body">
                 <h5 class="card-title">Biryani at Pak Liyari</h5>
                 <p class="card-text">Known as one of the best Pakistani restaurants in Dubai. Their Biryani is outstanding and full of flavour. Additionally people love the korma, the saffron kheer and the kebabs. Everything is worth a try at Pak Liyari.</p>
