--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="album py-5 bg-light w-75">
       <div class="container w-100">
 
-        <div class="row" w-100>
+        <div class="row w-100">
           
 
     
