--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </section>
     
     <div class="album py-5 bg-light">
-      <div class="container">
+      <div class="container-fluid">
 
         <div class="row">
           
