--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
           </p>
         </div>
       </section>
+
+    <div class="container-fluid stuck">
+      <form class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search">
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+    </div>    
     
     <div class="album py-5 bg-light">
       <div class="container-fluid">
