--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         </div>
       </section>
 
+    <script>$(document).ready(function(){
+      $(window).stuck();
+    });
+
+    // https://github.com/alextaujenis/jquery-stuck
+    //# sourceURL=pen.js
+    </script>    
+    
     <div class="container-fluid stuck">
       <form class="navbar-form navbar-left" role="search">
       <div class="form-group">
